Remove Vavr